--- a/index.html
+++ b/index.html
@@ -1,51 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nike World - Products</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; background: #f4f4f4; }
-    header { background: black; color: white; padding: 20px; text-align: center; }
-    nav a { margin: 0 15px; color: white; text-decoration: none; font-weight: bold; }
-    nav a:hover { color: orange; }
-    section { padding: 20px; text-align: center; }
-    .product { margin: 20px; display: inline-block; width: 250px; background: white; padding: 15px; border-radius: 10px; }
-    img { width: 100%; border-radius: 10px; }
-    footer { background: black; color: white; text-align: center; padding: 10px; margin-top: 20px; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Shia's 18th Birthday Celebration 🎉</title>
+
+<style>
+/* internal css for the invitation */
+
+body{
+  margin:0;
+  font-family: 'Segoe UI', Tahoma, sans-serif;
+  background: linear-gradient(to bottom right, #fff5f8, #ffffff);
+  color:#333;
+}
+
+header{
+  background:#d81b60;
+  color:#fff;
+  text-align:center;
+  padding:25px 10px;
+}
+
+header h1{
+  margin:0;
+  font-size:2.4em;
+}
+
+main{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  padding:25px;
+}
+
+section{
+  max-width:850px;
+  text-align:center;
+}
+
+figure{
+  margin:20px 0;
+}
+figure img{
+  width:85%;
+  max-width:600px;
+  border-radius:10px;
+  box-shadow:0 3px 6px rgba(0,0,0,.25);
+}
+figcaption{
+  font-style:italic;
+  color:#555;
+  margin-top:5px;
+}
+
+article{
+  background:#fff3e0;
+  padding:20px;
+  border-radius:10px;
+  margin-top:20px;
+  box-shadow:0 2px 5px rgba(0,0,0,0.1);
+}
+
+h2{
+  color:#ad1457;
+  margin-top:0;
+}
+
+ul{
+  list-style:none;
+  padding:0;
+  margin:0;
+}
+ul li{
+  margin:6px 0;
+}
+
+.map{
+  margin-top:20px;
+  border-radius:8px;
+  overflow:hidden;
+  box-shadow:0 2px 5px rgba(0,0,0,0.2);
+}
+
+footer{
+  background:#d81b60;
+  color:white;
+  text-align:center;
+  padding:15px 10px;
+  font-size:.9em;
+  margin-top:30px;
+}
+</style>
 </head>
+
 <body>
-  <header>
-    <h1>Nike Products</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="products.html">Products</a>
-      <a href="about.html">About</a>
-    </nav>
-  </header>
+
+<header>
+  <h1>🎂 Shia’s 18th Birthday Celebration 🎉</h1>
+  <p>Come and join us for a night of laughter, music, and wonderful memories!</p>
+</header>
+
+<main>
 
   <section>
-    <h2>Our Best Sellers</h2>
-    <div class="product">
-      <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/2b56c8c1-9c6d-4cc6-8717-1e5a6e4f93a7/air-jordan-1-mid-shoes-BpARGV.png" alt="Air Jordan 1">
-      <h3>Air Jordan 1</h3>
-      <p>Classic basketball shoes with timeless style.</p>
-    </div>
-    <div class="product">
-      <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/82a59d1f-bd3f-4506-8b88-0506a1a22a57/air-max-90-shoes-KPVlKJ.png" alt="Air Max 90">
-      <h3>Air Max 90</h3>
-      <p>Iconic running shoes with maximum comfort.</p>
-    </div>
-    <div class="product">
-      <img src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/eefdbf9a-3b6d-408d-a78a-35283e2f9a14/metcon-9-training-shoes-6VzqBL.png" alt="Nike Metcon">
-      <h3>Nike Metcon 9</h3>
-      <p>Perfect training shoes for strength and endurance.</p>
-    </div>
-  </section>
+    <figure>
+      <!-- sample birthday image -->
+      <img src=""C:\Users\Shia\Downloads\f4ba7999-dfbb-4913-bfce-df65771fba60.jpg"" alt="Birthday party setup">
+      <figcaption>Let’s celebrate Shia’s special day together!</figcaption>
+    </figure>
 
-  <footer>
-    <p>&copy; 2025 Nike World | Just Do It</p>
-  </footer>
+    <article>
+      <h2>📅 Event Details</h2>
+      <p><strong>Date:</strong> December 15, 2025 (Monday)</p>
+      <p><strong>Time:</strong> 6:00 PM – 10:00 PM</p>
+      <p><strong>Venue:</strong> Patio Luisa, Toclong II St.</p>
+      <p><strong>Theme:</strong> “An Evening of Elegance and Sparkle”</p>
+    </article>
+
+    <article>
+      <h2>🎁 What to Bring</h2>
+      <ul>
+        <li>Gift for Shia (optional)</li>
+        <li>Wear something pastel or white</li>
+        <li>Bring your best smile and good vibes!</li>
+      </ul>
+    </article>
+
+    <article>
+      <h2>📧 RSVP</h2>
+      <p>Please confirm attendance by <strong>December 10, 2025</strong>.</p>
+      <p>Email your RSVP to: <a href="mailto:shia18bday@gmail.com">shia18bday@gmail.com</a></p>
+    </article>
+
+    <article>
+      <h2>📍 Location Map</h2>
+      <p>Patio Luisa, Toclong II Street, Imus City, Cavite</p>
+      <div class="map">
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3858.916309815421!2d120.93635857507832!3d14.396243085873672!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397cf5b87b9c43d%3A0x5fae9b9c2d7081b5!2sPatio%20Luisa%20Events%20Place!5e0!3m2!1sen!2sph!4v1735052000000!5m2!1sen!2sph"
+          width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy">
+        </iframe>
+      </div>
+    </article>
+  </section>
+</main>
+
+<footer>
+  <p>Contact Person: <strong>Alyssa Cruz</strong></p>
+  <p>Phone: 0917-654-3210 | Email: <a href="mailto:alyssa.cruz@gmail.com" style="color:white;">alyssa.cruz@gmail.com</a></p>
+  <p>© 2025 Shia’s 18th Birthday | All Rights Reserved</p>
+</footer>
+
 </body>
 </html>
