--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Shia's 18th Birthday Celebration 🎉</title>
+<title>Shia's 17th Birthday Celebration 🎉</title>
 
 <style>
 /* internal css for the invitation */
@@ -98,7 +98,7 @@ footer{
 
 <header>
   <h1>🎂 Shia’s 18th Birthday Celebration 🎉</h1>
-  <p>Come and join us for a night of laughter, music, and wonderful memories!</p>
+  <p>Come and join us for a night of laughter, music, and fun memories!</p>
 </header>
 
 <main>
@@ -112,7 +112,7 @@ footer{
 
     <article>
       <h2>📅 Event Details</h2>
-      <p><strong>Date:</strong> December 15, 2025 (Monday)</p>
+      <p><strong>Date:</strong> November 26, 2025 (Monday)</p>
       <p><strong>Time:</strong> 6:00 PM – 10:00 PM</p>
       <p><strong>Venue:</strong> Patio Luisa, Toclong II St.</p>
       <p><strong>Theme:</strong> “An Evening of Elegance and Sparkle”</p>
@@ -122,14 +122,14 @@ footer{
       <h2>🎁 What to Bring</h2>
       <ul>
         <li>Gift for Shia (optional)</li>
-        <li>Wear something pastel or white</li>
+        <li>Wear something casual or formal</li>
         <li>Bring your best smile and good vibes!</li>
       </ul>
     </article>
 
     <article>
       <h2>📧 RSVP</h2>
-      <p>Please confirm attendance by <strong>December 10, 2025</strong>.</p>
+      <p>Please confirm attendance by <strong>November 20, 2025</strong>.</p>
       <p>Email your RSVP to: <a href="mailto:shia18bday@gmail.com">shia18bday@gmail.com</a></p>
     </article>
 
